...
          <FormInput
            label="Full Name"
            value={form.name}
            onChangeText={set("name")}
            error={errors.name}
            iconName="person-outline"
            placeholder="Karim Ali"
            autoCapitalize="words"
          />
          <FormInput
            label="Email"
            value={form.email}
            onChangeText={set("email")}
            error={errors.email}
            iconName="mail-outline"
            keyboardType="email-address"
            placeholder="you@example.com"
          />
          <FormInput
            label="Phone"
            value={form.phone}
            onChangeText={set("phone")}
            error={errors.phone}
            iconName="call-outline"
            keyboardType="phone-pad"
            placeholder="01812345678"
          />
          <FormInput
            label="Password"
            value={form.password}
            onChangeText={set("password")}
            error={errors.password}
            iconName="lock-closed-outline"
            isPassword
            placeholder="••••••••"
          />
          <FormInput
            label="Confirm Password"
            value={form.confirm}
            onChangeText={set("confirm")}
            error={errors.confirm}
...
